# Platform

./: CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  index.html
assets/: VersionInfo1.rc
branches/archive/mp-lan-src/: CMakeLists.txt
branches/experimental/mp-local-src/: WARN.md
branches/stable/sp-stable-src/src/: main.c
doc/: CONSOLE.md  HELP.md
mp-lan-src/: WARN.md
mp-lan-src/src/: main.c
source/sp-stable-src/assets/code/: get_code_libs.sh
source/sp-stable-src/src/: main.c
sp-stable-src/: CMakeLists.txt  compile.sh  console.sh  libs.sh
sp-stable-src/Workspace/: compile.sh
sp-stable-src/Workspace/code/: get_code_experimental.sh
sp-stable-src/assets/code/: get_code.sh  get_code_main.sh
sp-stable-src/src/: main.c
src/: main.c
